Image Change and Form Fixes on Mobile and Chrome

--- a/css/local.css
+++ b/css/local.css
@@ -342,6 +342,10 @@ Mobile Stuff
 	padding: 0em;
 	text-wrap:normal;
 	}
+	.well {
+		background:none;
+		border:none;
+	}
 
 }
 
